[package]
name = "物料仓库管理"
version = "1.0.0"
description = "个人物料/元器件管理系统"
authors = ["you"]
license = ""
repository = ""

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "fs-all", "path-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
